[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "helicalwheel"
version = "0.1.1"
authors = [
  {name = "Jann Staebler", email = "jann.staebler@uzh.ch"}
]

description = "Helical wheel representations of peptide sequences."

readme = "README.md"

requires-python = ">=3.14"

dependencies = ["numpy", "pandas", "matplotlib"]

license = "MIT"
license-files = ["LICENSE"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

